# ros2_kimm_robot

./: README.md
kimm_control/: package.xml  setup.cfg  setup.py
kimm_control/config/: kimm_control.yaml
kimm_control/kimm_control/: base_bridge.py  conversions.py  hardware_bridge.py  kimm_robot_node.py  kinematics.py  simulated_bridge.py
kimm_control/launch/: robot.launch.py
kimm_description/: CMakeLists.txt  package.xml
kimm_description/launch/: display.launch.py
kimm_description/meshes/visual/: base_plate.stl  top_plate.stl
kimm_description/rviz/: kimm_display.rviz
kimm_description/urdf/: kimm_model.urdf.xacro  kimm_stewart_platform.xacro  materials.xacro  smart_template.urdf.xacro
